- The 'Manage durability' option ('Frames') has been removed as you can move the durability frame with Edit Mode.

10.0.32 - 24th January 2023
- For 'Media', added dungeon music for 'Azure Vault' and 'Vault of the Incarnates'.

10.0.31 - 20th January 2023
- For 'Mute game sounds' ('System'), you can now mute login screen sounds.  If checked, login screen sounds will be muted when you logout of the game.  Note that login screen sounds will not be muted when you initially launch the game.  They will only be muted when you logout of the game.  This includes manually logging out as well as being forcefully logged out by the game server for reasons such as being away for an extended period of time.  No more dragons roaring when you fall asleep while the game is running!
- For 'Media', added new movie 'The Seed of Hope'.  You can watch it in Movies and listen to it in Various > Cinematics.

10.0.30 - 16th January 2023
- For 'Mute game sounds' ('System'), you can now mute the dragonriding Vigor recharging sound.
- You can use /run leaplus("traits") to learn all available dragonriding traits instantly.
- PTR (10.0.5): For 'Sell junk automatically', you can now choose whether uncollected grey gear should be excluded for your character, your alts or both.

10.0.29 - 11th January 2023
- Added music for Algeth'ar Academy (Media > Dungeons).

10.0.28 - 7th January 2023
- For 'Mute mount sounds' ('System'), you can now mute Archdruid's Lunarwing Form.
- For 'Remove transforms' ('System'), you can now remove the Atomically Recalibrated transform (from the Atomic Recalibrator toy).
- For 'Show train all button' ('Interface'), the train all button now has a global name of LeaPlusGlobalTrainAllButton.
- Fixed an issue with 'Enhance tooltip' ('Interface') which may have caused the target line to be shown outside of the tooltip frame.

10.0.27 - 4th January 2023