@@ -2,6 +2,7 @@
 - Updated for game patch 10.0.5.
 - For 'Sell junk automatically', there are now two settings available in the configuration panel so that you can exclude uncollected grey gear that is designed for your character, your alts or both.  Soulbound grey gear will now always be sold because you cannot give it to other players and it will not have a learnable appearance.
 - The 'Manage durability' option ('Frames') has been removed as you can move the durability frame with Edit Mode.
+- The /ltp slash command has returned.  The /run leaplus() command is no longer available.
 
 10.0.32 - 24th January 2023
 - For 'Media', added dungeon music for 'Azure Vault' and 'Vault of the Incarnates'.
